<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zj.activity.LoadActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textlayout_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="56dp">

        <com.bill56.customui.ClearEdit
            android:id="@+id/editText_Lphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="手机号"
            android:inputType="number"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textlayout_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textlayout_phone">

        <com.bill56.customui.HidePwdEdit
            android:id="@+id/editText_Lpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="密码"
            android:inputType="textPassword"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/checkBox_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textlayout_pwd"
        android:layout_marginTop="20dp"
        android:text="@string/load_remember" />

    <Button
        android:id="@+id/button_load"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/checkBox_pwd"
        android:layout_marginTop="60dp"
        android:background="@drawable/loadin_button"
        android:onClick="Load"
        android:text="@string/load_loadin" />

    <Button
        android:id="@+id/button_zhuce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/button_load"
        android:background="@drawable/zhuce_button"
        android:text="@string/load_register"
        android:onClick="Zhuce"/>

</RelativeLayout>
