<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.asus.dt.MainActivity">

    <FrameLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.bill56.carlife.MainActivity">

            <com.amap.api.maps.MapView
                android:id="@+id/map"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </com.amap.api.maps.MapView>

            <TextView
                android:id="@+id/location_errInfo_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|left"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:background="@color/red"
                android:textColor="@color/darkgrey"
                android:text="TextView"
                android:visibility="gone"/>

            <RadioGroup
                android:id="@+id/gps_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|left"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/grey"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/gps_locate_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/gpslocate"
                    android:textColor="@android:color/black" />

                <RadioButton
                    android:id="@+id/gps_follow_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gpsfollow"
                    android:textColor="@android:color/black" />

                <RadioButton
                    android:id="@+id/gps_rotate_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gpsrotate"
                    android:textColor="@android:color/black" />
            </RadioGroup>

        </RelativeLayout>
    </FrameLayout>

    <include layout="@layout/tab_left" />

</android.support.v4.widget.DrawerLayout>